# groute

./: .gitignore  .python-version  README.md  config.py  main.py  pyproject.toml  test.ipynb
client/: app.vue  main.ts  nuxt.config.ts  package-lock.json  package.json
client/assets/css/: main.css
client/components/: SpotInput.vue  TravelResult.vue  TravelRoute.vue
client/pages/: index.vue  info.vue  result.vue  step.vue  travelroute.vue
server/: Dockerfile  algorithm.py  app.py  assistant.py  config.py  deps.py  docker-compose.yaml  dto.py  main.py  pyproject.toml  test.py  tourapi.py  typed.py  vercel.json
server/api/: app.py  config.py  dto.py  services.py
server/api/routes/: groute.py
server/api/services/: route.py  tourapi.py
server/app/: config.py  deps.py  dto.py  main.py  services.py  tourapi.py  typed.py  utils.py
server/resources/: citycode.json  region.json
server/routes/: groute.py
server/scripts/: start-dev.sh
server/services/: route.py  tourapi.py  weather.py
server/templates/: main.html
