[tool.poetry]
name = "app"
version = "0.1.0"
description = "Your Best Route"
authors = ["chado13 <geaya13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dotenv-python = "^0.0.1"
openai = "^1.16.2"
fastapi = "^0.110.1"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
